--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,18 @@
+.logodaloja {
+width: 22%;
+
+}
+
 .menu-options {
     display: flex;
     justify-content: space-around;
     height: 100px;
     align-items: center;
-    background-color: #a33737;
+    background-color: rgb(0, 0, 0);
 }
 
 .menu-options li {
-    background-color: rgb(6, 113, 180);
+    background-color: rgb(0, 0, 0);
     flex: 1;
     text-align: center;
     padding-top: 10px;
@@ -23,8 +28,13 @@
     padding-bottom: 10px;
 }
 
-/* @media screen and (max-width: 992px) {
+@media screen and (max-width: 992px) {
     .menu-options {
         display: block;
     }  
-} */
+
+    .logodaloja {
+        width: 20%;
+        flex-direction: column;
+    }
+}
