--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@
     justify-content: space-around;
     height: 100px;
     align-items: center;
-    background-color: #a33737;
+    background-color: #04449c;
 }
 
 .menu-options li {
-    background-color: rgb(6, 113, 180);
+    background-color: #04449c;
     flex: 1;
     text-align: center;
     padding-top: 10px;
@@ -18,7 +18,6 @@
     color: white;
     text-transform: uppercase;
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
     padding-top: 10px;
     padding-bottom: 10px;
 }
